add  recommend module and fix gpu support 2